# Hermes-Codex-Plugin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.agents/plugins/: marketplace.json
plugins/hermes-codex-plugin/: .mcp.json  LICENSE  README.md  pyproject.toml
plugins/hermes-codex-plugin/.codex-plugin/: plugin.json
plugins/hermes-codex-plugin/hooks/: _bootstrap.py  hooks.json  pre_compact.py  session_start.py  stop.py  user_prompt_submit.py
plugins/hermes-codex-plugin/scripts/: mcp_server.py
plugins/hermes-codex-plugin/skills/hermes-codex-plugin/: SKILL.md
plugins/hermes-codex-plugin/skills/hermes-codex-plugin/agents/: openai.yaml
plugins/hermes-codex-plugin/src/hermes_codex_plugin/application/: __init__.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/application/memory/: dto.py  mapper.py  recall.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/application/skills/: __init__.py  dto.py  mapper.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/domain/: __init__.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/domain/common/: entity.py  value_objects.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/infrastructure/: __init__.py  config.py  logging.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/presentation/: __init__.py  formatting.py
plugins/hermes-codex-plugin/tests/: test_cli.py  test_config.py  test_domain_memory.py  test_domain_skills.py  test_hooks.py  test_mappers.py  test_mcp_server.py  test_policy.py  test_recall.py  test_skill_miner.py  test_storage.py
(+29 files in other folders)
