[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-codex-plugin"
version = "0.10.1"
description = "Local-first memory, recall, and skill evolution for Codex agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Hermes Codex Plugin contributors" }
]
keywords = ["codex", "plugin", "memory", "skills", "sqlite", "fts5", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development"
]
dependencies = [
  "loguru>=0.7,<1"
]

[project.urls]
Homepage = "https://github.com/lyakakoy/hermes-codex-plugin"
Repository = "https://github.com/lyakakoy/hermes-codex-plugin"
Issues = "https://github.com/lyakakoy/hermes-codex-plugin/issues"

[project.scripts]
hermes-codex-plugin = "hermes_codex_plugin.presentation.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
